# ArkovaCarson

./: .env.example  .env.test.example  .eslintrc.cjs  .gitignore  .gitleaks.toml  .gitleaksignore  .lighthouse-baseline.json  .lighthouserc.json  .mcp.json  .npmrc  .sonarcloud.properties  .stylelintrc.json  Arkova-Document-Alignment-Audit.docx  Arkova-Global-Data-Source-Registry.docx  Arkova-Master-Strategy-Complete.docx  Arkova-Master-Strategy.docx  Arkova-Product-Backlog.docx  Arkova-Roadmap-x402-Plan.docx  Arkova-Strategic-Roadmap-v2.docx  Arkova-Verification-Bootstrap-Deep-Dive.docx  Arkova-Verified-Intelligence-SLM-Analysis.docx  CLAUDE.md  CODEOWNERS  GEO-AUDIT-REPORT.md  GEO-CRAWLER-ACCESS.md  GEO-SCHEMA-REPORT.md  HANDOFF.md  MEMORY.md  README.md  arkova-verification-bootstrap-strategy.md  document-alignment-audit.md  eslint.config.js  geo-audit-data.json  index.html  llms-txt-generated.txt  node_modules  package-lock.json  package.json  playwright.config.ts  railway.json  (+9 more)
.claude/: launch.json  settings.json  settings.local.json
.githooks/: pre-commit
.github/: CONTRIBUTING.md  agents.md  dependabot.yml  pull_request_template.md
docs/: BACKLOG.md  BETA_PRODUCTION_READINESS.md  GEO-PLATFORM-READINESS-REPORT.md  NEXT_STEPS.md  SARAH_BACKLOG.md  SESSION_37_PROMPT.md  SPRINT_2026-03-25.md  SPRINT_PLAN_2026-Q2.md  WORK_ITEMS.md  jira-epic-audit-2026-04-21.md  process_enforcement.md  public-keys.json
e2e/: a11y.spec.ts  agents.md  anchor-creation.spec.ts  api-keys.spec.ts  api-verify-flow.spec.ts  auth.setup.ts  auth.spec.ts  billing.spec.ts  cross-tenant.spec.ts  csv-upload.spec.ts  dashboard.spec.ts  data-retention.spec.ts  error-states.spec.ts  identity.spec.ts  integrations-docusign.spec.ts  integrations-drive.spec.ts  legal-pages.spec.ts  member-invite.spec.ts  org-admin.spec.ts  (+17 more)
sdks/python/: README.md  pyproject.toml
sdks/python/arkova/: __init__.py  client.py  types.py
sdks/python/tests/: test_client.py
(+2965 files in other folders)
