[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arkova"
version = "0.1.0"
description = "Arkova SDK — Anchor and verify data integrity on Bitcoin"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[project.urls]
Homepage = "https://arkova.ai"
Documentation = "https://arkova.ai/docs/sdk"
Repository = "https://github.com/carson-see/arkova-sdk-python"
