[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arkova"
version = "0.2.0"
description = "Arkova SDK — Anchor, verify, and manage credentials on Bitcoin"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.24"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
keywords = ["arkova", "bitcoin", "verification", "credentials", "anchoring"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio", "respx>=0.20"]

[project.urls]
Homepage = "https://arkova.ai"
Documentation = "https://arkova.ai/docs/sdk/python"
Repository = "https://github.com/carson-see/arkova-sdk-python"
Changelog = "https://github.com/carson-see/arkova-sdk-python/releases"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["arkova"]
